--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,26 @@
 /* TODO Add site wide styles */
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Quicksand', sans-serif;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+.wrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+main ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+}
