--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,39 +1,62 @@
-.hidden{
+.hidden {
     display: none;
 }
 
-ul li{
+ul li {
     list-style: none;
 }
-.polishy a{
+
+.polishy a {
     color: rgb(255, 111, 0);
 }
-.polishy{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 38px;
+
+.polishy {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 40px;
+    margin: 1rem;
 }
-nav ul{
+
+nav ul {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
+}
+
+.nav-wrap {
+    border-bottom: 2px solid rgb(228, 224, 224);
+    margin-bottom: 1rem;
+
 }
 
 nav{
-    margin: 1rem;
-    border-bottom: 1px solid gray;
-
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
-.cart_profile{
+.cart_profile {
     display: flex;
     flex-direction: row;
-    gap: 2rem;
+    gap: .5rem;
     align-items: center;
 }
 
-.signin button{
+.cart button {
+    background-color: transparent;
+    border: none;
+    font-size: 14px;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 30px;
+    cursor: pointer;
+}
+
+.cart button:hover {
+    background-color: rgb(233, 241, 241);
+}
+
+.signin button {
     background-color: transparent;
     border: none;
     font-size: 14px;
@@ -43,10 +66,25 @@ nav{
     cursor: pointer;
 }
 
-.signin button:hover{
+.signin button:hover {
     background-color: rgb(233, 241, 241);
 }
 
-.cart{
-    cursor: pointer;
+.search{
+    display: flex;
+    flex-direction: row;
+    width: 42rem;
+}
+
+.search input{
+    width: 100%;
+    border-radius: 50px;
+    height: 2.5rem;
+    border: 2px solid black;
+    background-color: rgb(242, 241, 241);
+}
+
+.search button{
+    border:none;
+    background-color: transparent;
 }
