--- a/frontend/src/components/PolishList/PolishList.css
+++ b/frontend/src/components/PolishList/PolishList.css
@@ -23,3 +23,19 @@
     justify-content: center;
     font-size: 30px;
 }
+
+.polish img {
+    height: 200px;
+    width: 200px;
+    border-radius: 10px;
+}
+.polish {
+    margin: 1rem;
+    width: 200px;
+    transition: box-shadow .3s;
+    border-radius: 6px;
+}
+
+.polish:hover {
+    box-shadow: 0 0 11px rgba(33, 33, 33, .3);
+}
