--- a/frontend/src/components/CartShow/CartShow.css
+++ b/frontend/src/components/CartShow/CartShow.css
@@ -1,5 +1,79 @@
+.cart {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3rem;
+    margin-left: 3rem;
+}
 
-.cart img{
-    width: 100px;
-    height: 100px
+.polish-items img {
+    height: 250px;
+    width: 250px;
+    border-radius: 10px;
+    margin: 1rem;
+}
+
+.polish-items {
+    margin: 2rem;
+    border-radius: 11px;
+    font-family: 'Roboto', sans-serif;
+    width: 35rem;
+    height: 20rem;
+    display: flex;
+    flex-direction: row;
+    gap: 2rem;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.total-cost {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    margin: 1rem;
+    margin-top: 10rem;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.bold{
+    font-weight: bolder;
+    font-size: 20px;
+}
+
+.shipping{
+    margin: 1rem;
+    font-size: 20px;
+}
+
+.final-total {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    margin: 1rem;
+    align-items: center;
+    margin-bottom: 2rem;
+    justify-content: space-between;
+}
+
+.cart-purchase {
+    font-family: 'Roboto', sans-serif;
+    margin: 1rem;
+    width: 25rem;
+}
+
+.cart-quan {
+    margin: 1rem;
+}
+
+.cart-price {
+    margin: 1rem;
+}
+
+.checkout button {
+    border: 2px solid black;
+    height: 3rem;
+    width: 350px;
+    border-radius: 25px;
+    background-color: black;
+    color: white;
+    font-size: 15px
 }
