--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,5 +21,7 @@ a {
 main ul {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    justify-content: space-evenly;
+    justify-items: center;
 
 }
