--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -3,7 +3,6 @@
 }
 
 .profile-dropdown {
-    margin-top: .5rem;
     border: 1px solid black;
     position: absolute;
     background-color: whitesmoke;
@@ -16,6 +15,19 @@
     display: flex;
     flex-direction: column;
     margin: .6rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.profile-dropdown a {
+    height: 2rem;
+    width: 4.2rem;
+    border-radius: 30px;
+    text-align: center;
+    text-decoration: none;
+}
+
+.profile-dropdown a:hover {
+background-color: rgb(233, 241, 241);
 }
 
 ul li {
@@ -31,14 +43,9 @@ ul li {
     font-size: 40px;
     margin: 1rem;
 }
-
-/* .nav-wrap {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 1rem;
-} */
+.polishy a{
+    text-decoration: none;
+}
 
 .nav-wrap {
     border-bottom: 2px solid rgb(228, 224, 224);
@@ -57,12 +64,12 @@ nav {
     align-items: center;
 }
 
-.top{
+.top {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 100%
+    margin-bottom: 1rem;
 }
 
 .shopping-cart button {
@@ -96,7 +103,9 @@ nav {
 .search {
     display: flex;
     flex-direction: row;
-    width: 42rem;
+    width: 44rem;
+    padding: 1rem;
+    align-items: center;
 }
 
 .search input {
@@ -105,11 +114,13 @@ nav {
     height: 2.5rem;
     border: 2px solid black;
     background-color: rgb(242, 241, 241);
+    cursor: not-allowed;
 }
 
 .search button {
     border: none;
     background-color: transparent;
+    cursor: not-allowed;
 }
 
 .prof button:hover {
@@ -125,13 +136,20 @@ nav {
 }
 
 .signout button {
-    height: 3rem;
+    height: 2rem;
     width: 4rem;
     border-radius: 30px;
     background-color: transparent;
-    border: none
+    border: none;
+    font-family: 'Roboto', sans-serif;
 }
 
 .signout button:hover {
     background-color: rgb(233, 241, 241);
+}
+
+@media (max-width: 1000px) {
+    .search {
+        width: 35rem;
+    }
 }
