--- a/frontend/src/components/PolishList/PolishList.css
+++ b/frontend/src/components/PolishList/PolishList.css
@@ -2,6 +2,10 @@
     text-decoration: none;
 }
 
+.polish a {
+    text-decoration: none;
+}
+
 .front-image {
     margin: 1rem;
 }
@@ -10,6 +14,7 @@
     border-radius: 100px;
     height: 100px;
     width: 100px;
+    object-fit: cover;
 }
 
 .front-image li img:hover {
@@ -19,7 +24,7 @@
 
 .front-image li {
     display: flex;
-    gap: 3rem;
+    gap: 5rem;
     justify-content: center;
 }
 
@@ -34,6 +39,7 @@
     height: 250px;
     width: 250px;
     border-radius: 10px;
+    object-fit: cover;
 }
 
 .polish {
@@ -55,4 +61,25 @@
 
 a {
     color: black;
+}
+
+@media (max-width: 1100px) {
+    .front-image li {
+        gap: 3rem;
+    }
+}
+@media (max-width: 900px) {
+    .front-image li {
+        gap: 2rem;
+    }
+}
+
+@media (max-width: 750px) {
+    .front-image li {
+        gap: 1rem;
+    }
+        .front-image ul img{
+            height:80px;
+            width: 80px
+        }
 }
