--- a/frontend/src/components/PolishList/PolishList.css
+++ b/frontend/src/components/PolishList/PolishList.css
@@ -30,9 +30,12 @@
 
 .top-text {
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     font-size: 30px;
     font-family: 'Roboto', sans-serif;
+    gap:1rem;
 }
 
 .polish img {
